Refactor environment variables and update dependencies across the project. Changed DATABASE_URL format in .env.example files, improved import order in various components, and added new dependencies for ESLint and Prettier plugins in package.json.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # =============================================================================
 # Database
 # =============================================================================
-DATABASE_URL=postgres://paasdeploy:paasdeploy@localhost:5432/paasdeploy?sslmode=disable
+DATABASE_URL=postgres://paas_deploy:paas_deploy@localhost:5432/paas_deploy?sslmode=disable
 
 # =============================================================================
 # Backend API
