--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -18,7 +18,7 @@ LOG_LEVEL=info
 # =============================================================================
 # PostgreSQL connection string
 # Format: postgres://user:password@host:port/database?sslmode=disable
-DATABASE_URL=postgres://paasdeploy:paasdeploy@localhost:5432/paasdeploy?sslmode=disable
+DATABASE_URL=postgres://paas_deploy:paas_deploy@localhost:5432/paas_deploy?sslmode=disable
 
 # =============================================================================
 # Deploy Engine
