Add GitHub integration support by introducing configuration options for GitHub Personal Access Token, webhook secret, and webhook URL. Implement webhook management in the application, allowing for setup, removal, and status checks of webhooks. Update app repository and service layers to handle webhook-related data and operations, enhancing the overall deployment process.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -46,3 +46,18 @@ DOCKER_HOST=unix:///var/run/docker.sock
 
 # Docker registry URL for pushing built images (optional, leave empty for local)
 # DOCKER_REGISTRY=registry.example.com
+
+# =============================================================================
+# GitHub Integration
+# =============================================================================
+# GitHub Personal Access Token for API access (scopes: repo, admin:repo_hook)
+# Generate at: https://github.com/settings/tokens
+ GITHUB_PAT=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Webhook secret for HMAC signature validation
+# Generate with: openssl rand -hex 32
+GITHUB_WEBHOOK_SECRET=your-webhook-secret-here
+
+# Public URL where GitHub will send webhook events
+# Example: https://deploy.yourdomain.com/webhooks/github
+GITHUB_WEBHOOK_URL=
