Update backend configuration and dependencies; add Swagger support and enhance logging. Modify .gitignore to include new temporary files and update package.json for development command. Introduce environment variable handling in config and improve webhook management with detailed API documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ out/
 
 # Go
 apps/backend/bin/
+apps/backend/tmp/
+apps/backend/build-errors.log
 *.exe
 *.exe~
 *.dll
@@ -67,3 +69,6 @@ temp/
 
 # Plan files (Cursor)
 .cursor/
+
+# Ngrok binary
+ngrok
