--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,6 +4,10 @@
 # =============================================================================
 # Server
 # =============================================================================
+# Environment: development, staging, production
+# In development, logs are colorized; in production, logs are JSON
+APP_ENV=development
+
 # Host address to bind the server (0.0.0.0 = all interfaces)
 HOST=0.0.0.0
 
