--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -28,7 +28,9 @@ DATABASE_URL=postgres://paas_deploy:paas_deploy@localhost:5432/paas_deploy?sslmo
 # Deploy Engine
 # =============================================================================
 # Directory where application repositories are cloned and stored
-DEPLOY_DATA_DIR=/data/apps
+# Supports: ~ (home), $HOME, absolute paths
+# Default (if not set): ~/.paas-deploy/apps
+DEPLOY_DATA_DIR=~/.paas-deploy/apps
 
 # Number of concurrent deploy workers (parallel deployments)
 DEPLOY_WORKERS=2
