Enhance development and configuration processes: update package.json to run frontend and backend in parallel, modify pnpm-lock.yaml to upgrade @radix-ui/react-dialog dependency, and adjust pnpm-workspace.yaml to include frontend package. Implement directory management in backend configuration, ensuring necessary directories are created and writable. Refactor app cleaner and worker logic to improve error handling and logging, and enhance log viewer component in frontend for better log parsing and display.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "A lightweight, self-hosted PaaS for automatic deployments",
   "scripts": {
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --filter=@paasdeploy/backend & sleep 3 && turbo run dev --filter=@paasdeploy/frontend",
+    "dev:parallel": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
