Rename PaaSDeploy to FlowDeploy across the project
- Updated environment configuration files to reflect the new FlowDeploy branding.
- Modified JSON schema, API documentation, and various code comments to replace PaaSDeploy references with FlowDeploy.
- Adjusted frontend titles and headers to align with the new project name.
- Ensured consistency in naming across all relevant files and documentation.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# PaaSDeploy Environment Configuration
+# FlowDeploy Environment Configuration
 # Copy this file to .env and adjust values for your environment
 
 # =============================================================================
@@ -51,7 +51,7 @@ VITE_SSE_URL=http://localhost:8080/events/deploys
 # =============================================================================
 # Traefik (Production)
 # =============================================================================
-# Domain for the PaaSDeploy dashboard
+# Domain for the FlowDeploy dashboard
 # TRAEFIK_DOMAIN=deploy.example.com
 
 # =============================================================================
