--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,4 +1,4 @@
-# PaaSDeploy Backend Environment Configuration
+# FlowDeploy Backend Environment Configuration
 # Copy this file to .env and adjust values for your environment
 
 # =============================================================================
