--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -1,4 +1,4 @@
-# PaaSDeploy Frontend Environment Configuration
+# FlowDeploy Frontend Environment Configuration
 # Copy this file to .env and adjust values for your environment
 
 # =============================================================================
