Enhance GitHub integration and authentication features
- Updated the .env.example file to include new GitHub OAuth and App configuration options for improved user authentication.
- Modified the backend configuration to support GitHub App integration, including new fields for App ID, name, private key, and installation URLs.
- Implemented authentication middleware and handlers to manage user sessions and secure routes.
- Enhanced the frontend to include authentication context and protected routes, ensuring only authenticated users can access certain pages.
- Updated API service to handle GitHub installations and repositories, improving interaction with GitHub's API.
- Added detailed documentation for creating and configuring a GitHub App, guiding users through the integration process.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -54,16 +54,68 @@ DOCKER_HOST=unix:///var/run/docker.sock
 # DOCKER_REGISTRY=registry.example.com
 
 # =============================================================================
-# GitHub Integration
+# GitHub Integration (Phase 1 - PAT)
 # =============================================================================
 # GitHub Personal Access Token for API access (scopes: repo, admin:repo_hook)
 # Generate at: https://github.com/settings/tokens
- GITHUB_PAT=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# GITHUB_PAT=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Webhook secret for HMAC signature validation
 # Generate with: openssl rand -hex 32
 GITHUB_WEBHOOK_SECRET=your-webhook-secret-here
 
 # Public URL where GitHub will send webhook events
-# Example: https://deploy.yourdomain.com/webhooks/github
+# Example: https://deploy.yourdomain.com/paas-deploy/v1/webhooks/github
 GITHUB_WEBHOOK_URL=
+
+# =============================================================================
+# GitHub OAuth (for user authentication)
+# =============================================================================
+# OAuth Client ID (from GitHub App settings)
+GITHUB_CLIENT_ID=Iv1.xxxxxxxxxxxxxxxxxx
+
+# OAuth Client Secret (from GitHub App settings)
+GITHUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# OAuth callback URL (must match GitHub App settings)
+GITHUB_OAUTH_CALLBACK_URL=http://localhost:3000/auth/github/callback
+
+# =============================================================================
+# GitHub App (for repository access)
+# =============================================================================
+# App ID (found on GitHub App settings page)
+GITHUB_APP_ID=123456
+
+# App Name (for display purposes)
+GITHUB_APP_NAME=FlowDeploy
+
+# Private key path (downloaded .pem file from GitHub App settings)
+GITHUB_APP_PRIVATE_KEY_PATH=/path/to/private-key.pem
+
+# Alternative: Base64 encoded private key (use one or the other)
+# GITHUB_APP_PRIVATE_KEY_BASE64=LS0tLS1CRUdJTi...
+
+# URL to install the GitHub App (redirect users here)
+GITHUB_APP_INSTALL_URL=https://github.com/apps/flowdeployapp/installations/new
+
+# URL where GitHub redirects after installation
+GITHUB_APP_SETUP_URL=http://localhost:3000/github/setup
+
+# =============================================================================
+# Authentication & Security
+# =============================================================================
+# Token encryption key (32 bytes, base64 encoded)
+# Generate with: openssl rand -base64 32
+TOKEN_ENCRYPTION_KEY=your-32-byte-key-base64-encoded-here
+
+# Session cookie name
+SESSION_COOKIE_NAME=flowdeploy_session
+
+# Session max age in seconds (default: 7 days)
+SESSION_MAX_AGE=604800
+
+# Use secure cookies (set to true in production with HTTPS)
+SESSION_SECURE=false
+
+# Frontend URL (for redirects after OAuth)
+FRONTEND_URL=http://localhost:3000
