Add GitHub Actions workflow for backend deployment and enhance migration features
- Introduced a new GitHub Actions workflow for deploying the backend to production, including linting, environment validation, Docker image building, and deployment steps.
- Updated the backend `.env.example` file to include new Cloudflare configuration options.
- Refactored the Nginx parser to improve regex handling for server configurations.
- Added new frontend components for managing migration, including container rows, Nginx site cards, and SSL certificate rows, along with associated hooks for migration status and actions.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -58,48 +58,48 @@ DOCKER_HOST=unix:///var/run/docker.sock
 # =============================================================================
 # GitHub Personal Access Token for API access (scopes: repo, admin:repo_hook)
 # Generate at: https://github.com/settings/tokens
-# GITHUB_PAT=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# GIT_HUB_PAT=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Webhook secret for HMAC signature validation
 # Generate with: openssl rand -hex 32
-GITHUB_WEBHOOK_SECRET=your-webhook-secret-here
+GIT_HUB_WEBHOOK_SECRET=your-webhook-secret-here
 
 # Public URL where GitHub will send webhook events
 # Example: https://deploy.yourdomain.com/paas-deploy/v1/webhooks/github
-GITHUB_WEBHOOK_URL=
+GIT_HUB_WEBHOOK_URL=
 
 # =============================================================================
 # GitHub OAuth (for user authentication)
 # =============================================================================
 # OAuth Client ID (from GitHub App settings)
-GITHUB_CLIENT_ID=Iv1.xxxxxxxxxxxxxxxxxx
+GIT_HUB_CLIENT_ID=Iv1.xxxxxxxxxxxxxxxxxx
 
 # OAuth Client Secret (from GitHub App settings)
-GITHUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+GIT_HUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # OAuth callback URL (must match GitHub App settings)
-GITHUB_OAUTH_CALLBACK_URL=http://localhost:3000/auth/github/callback
+GIT_HUB_OAUTH_CALLBACK_URL=http://localhost:3000/auth/github/callback
 
 # =============================================================================
 # GitHub App (for repository access)
 # =============================================================================
 # App ID (found on GitHub App settings page)
-GITHUB_APP_ID=123456
+GIT_HUB_APP_ID=123456
 
 # App Name (for display purposes)
-GITHUB_APP_NAME=FlowDeploy
+GIT_HUB_APP_NAME=FlowDeploy
 
 # Private key path (downloaded .pem file from GitHub App settings)
-GITHUB_APP_PRIVATE_KEY_PATH=/path/to/private-key.pem
+GIT_HUB_APP_PRIVATE_KEY_PATH=/path/to/private-key.pem
 
 # Alternative: Base64 encoded private key (use one or the other)
-# GITHUB_APP_PRIVATE_KEY_BASE64=LS0tLS1CRUdJTi...
+# GIT_HUB_APP_PRIVATE_KEY_BASE64=LS0tLS1CRUdJTi...
 
 # URL to install the GitHub App (redirect users here)
-GITHUB_APP_INSTALL_URL=https://github.com/apps/flowdeployapp/installations/new
+GIT_HUB_APP_INSTALL_URL=https://github.com/apps/flowdeployapp/installations/new
 
 # URL where GitHub redirects after installation
-GITHUB_APP_SETUP_URL=http://localhost:3000/github/setup
+GIT_HUB_APP_SETUP_URL=http://localhost:3000/github/setup
 
 # =============================================================================
 # Authentication & Security
@@ -119,3 +119,9 @@ SESSION_SECURE=false
 
 # Frontend URL (for redirects after OAuth)
 FRONTEND_URL=http://localhost:3000
+
+CLOUDFLARE_CLIENT_ID=      # Opcional (para OAuth futuro)
+CLOUDFLARE_CLIENT_SECRET=  # Opcional (para OAuth futuro)
+CLOUDFLARE_CALLBACK_URL=   # Opcional (para OAuth futuro)
+CLOUDFLARE_SERVER_IP=191.252.203.58      # IP do servidor para registros A
+CLOUDFLARE_DEFAULT_DOMAIN= # Domínio padrão para CNAME
