--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           version: latest
           working-directory: apps/backend
+          args: --timeout=5m
 
   validate-environment:
     needs: lint
