Add deploy script path to backend deployment workflow for improved deployment tracking

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - "apps/backend/**"
+      - ".github/scripts/deploy.exp"
       - ".github/workflows/deploy-backend.yml"
   workflow_dispatch:
 
